--- a/styles/css/header/vtex.store-drawer.css
+++ b/styles/css/header/vtex.store-drawer.css
@@ -1,3 +1,17 @@
 .openIconContainer {
-    color: #ffff;
+    color     : #ffff;
+    align-self: center;
+}
+
+.drawerContent {
+    background-color: #330e82;
+}
+
+.drawerHeader--mobile__drawer-login {
+    flex-direction: row-reverse;
+}
+
+.drawerHeader--mobile__drawer-login :first-child {
+    color  : #ffff;
+    z-index: 1;
 }
