--- a/styles/css/header/vtex.flex-layout.css
+++ b/styles/css/header/vtex.flex-layout.css
@@ -26,6 +26,10 @@
     align-items: center;
 }
 
+.flexCol--desktop__navbar--two {
+    background-color: #330e82;
+}
+
 @media only screen and (min-width: 931px) {
     .flexRow--main-header-phone {
         margin: 20px;
