--- a/styles/css/header/vtex.flex-layout.css
+++ b/styles/css/header/vtex.flex-layout.css
@@ -29,6 +29,17 @@
     background-color: #330e82;
 }
 
+.flexColChild--mobile__login-buttons :global(.vtex-login-2-x-label) {
+    margin        : 0;
+    font-size     : 1rem !important;
+    font-weight   : 600;
+    color         : white;
+    display       : block;
+    padding       : 8px 48px 8px 46px;
+    border        : solid white 1px;
+    text-transform: none;
+}
+
 @media only screen and (min-width: 931px) {
     .flexRow--main-header-phone {
         margin: 20px;
