--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -10,3 +10,24 @@
 .imageElement {
     max-height: initial !important;
 }
+
+.sliderLayoutContainer--home__next_games--shelf :global(.vtex-slider-layout-0-x-sliderTrack--home__next_games--shelf) {
+    transform     : translateX(0px) !important;
+    flex-direction: column;
+    width         : 100% !important;
+    gap           : 1rem;
+}
+
+.sliderTrack--home__next_games--shelf :global(.vtex-slider-layout-0-x-slide) {
+    width           : fit-content !important;
+    background-color: #1F0A4E;
+    align-self      : center;
+}
+
+.sliderTrack--home__next_games--shelf :global(.vtex-flex-layout-0-x-flexRowContent) {
+    gap: 8px;
+}
+
+:global(.vtex-product-summary-2-x-containerNormal) {
+    max-width: none !important;
+}
