--- a/styles/css/home/vtex.product-summary.css
+++ b/styles/css/home/vtex.product-summary.css
@@ -1,5 +1,6 @@
 .nameContainer {
     justify-content: initial;
+    padding        : 0;
 }
 
 .installmentContainer {
@@ -12,4 +13,32 @@
 
 .price_listPriceContainer {
     text-align: left;
+}
+
+.priceContainer {
+    padding: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    .brandName {
+        font-size: 0.75rem;
+    }
+
+    /* .price_sellingPriceLabel {
+        font-size: 0.75rem;
+    }
+
+    .installmentContainer {
+        font-size: 0.75rem;
+    } */
+
+    .imageStackContainer {
+        height: 133px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .imageStackContainer {
+        height: 100px;
+    }
 }
