--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -37,6 +37,12 @@
     bottom  : 8px;
 }
 
-.flexColChild--section__slider--four:nth-child(3n) {
+/* .flexColChild--section__slider--four:nth-child(3n) {
     align-self: center;
+} */
+
+.flexColChild--section__slider--four:nth-child(5n) {
+    align-self   : center;
+    margin-top   : 2.5rem;
+    margin-bottom: 2.5rem;
 }
