--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -12,10 +12,7 @@
 }
 
 .sliderLayoutContainer--home__next_games--shelf :global(.vtex-slider-layout-0-x-sliderTrack--home__next_games--shelf) {
-    transform     : translateX(0px) !important;
-    flex-direction: column;
-    width         : 100% !important;
-    gap           : 1rem;
+    gap: 1rem;
 }
 
 .sliderTrack--home__next_games--shelf :global(.vtex-slider-layout-0-x-slide) {
@@ -32,4 +29,11 @@
     max-width: none !important;
 }
 
-/* el width de sliderTrack--home__next_games--shelf :global(.vtex-slider-layout-0-x-slide) cambia en desktop */
+@media only screen and (max-width: 600px) {
+    .sliderLayoutContainer--home__next_games--shelf :global(.vtex-slider-layout-0-x-sliderTrack--home__next_games--shelf) {
+        transform     : translateX(0px) !important;
+        flex-direction: column;
+        width         : 100% !important;
+        gap           : 1rem;
+    }
+}
