fix: adjusting font file structure

--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,22 +1,120 @@
 @font-face {
     font-family: 'Metropolis';
     src        : url(assets/fonts/metropolis/Metropolis-Black.ttf),
-        url(assets/fonts/metropolis/Metropolis-BlackItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-Bold.ttf),
-        url(assets/fonts/metropolis/Metropolis-BoldItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-ExtraBold.ttf),
-        url(assets/fonts/metropolis/Metropolis-ExtraBoldItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-ExtraLight.ttf),
-        url(assets/fonts/metropolis/Metropolis-ExtraLightItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-Light.ttf),
-        url(assets/fonts/metropolis/Metropolis-LightItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-Medium.ttf),
-        url(assets/fonts/metropolis/Metropolis-MediumItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-Regular.ttf),
-        url(assets/fonts/metropolis/Metropolis-RegularItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-SemiBold.ttf),
-        url(assets/fonts/metropolis/Metropolis-SemiBoldItalic.ttf),
-        url(assets/fonts/metropolis/Metropolis-Thin.ttf),
-        url(assets/fonts/metropolis/Metropolis-ThinItalic.ttf);
+}
 
+@font-face {
+    font-family: 'Metropolis-BlackItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-BlackItalic.ttf);
+}
+
+@font-face {
+    font-family: 'Metropolis-Bold';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-Bold.ttf);
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Metropolis-BoldItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-BoldItalic.ttf);
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Metropolis-ExtraBold';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-ExtraBold.ttf);
+    font-weight: 900;
+}
+
+@font-face {
+    font-family: 'Metropolis-ExtraBoldItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-ExtraBoldItalic.ttf);
+    font-weight: 900;
+}
+
+@font-face {
+    font-family: 'Metropolis-ExtraLight';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-ExtraLight.ttf);
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'Metropolis-ExtraLightItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-ExtraLightItalic.ttf);
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'Metropolis-Light';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-Light.ttf);
+    font-weight: 200;
+}
+
+@font-face {
+    font-family: 'Metropolis-LightItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-LightItalic.ttf);
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'Metropolis-Medium';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-Medium.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Metropolis-MediumItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-MediumItalic.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Metropolis-Regular';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-Regular.ttf);
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Metropolis-RegularItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-RegularItalic.ttf);
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Metropolis-SemiBold';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-SemiBold.ttf);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Metropolis-SemiBoldItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-SemiBoldItalic.ttf);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Metropolis-Thin';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-Thin.ttf)
+}
+
+@font-face {
+    font-family: 'Metropolis-ThinItalic';
+    src        :
+        url(assets/fonts/metropolis/Metropolis-ThinItalic.ttf)
 }
