--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -1,16 +1,4 @@
-.paragraph--home__section--one--title {
-    color: red;
-}
-
-.paragraph--home__section--one--title-two {
-    color: green;
-}
-
-.paragraph--home__section--one--title-third {
-    color: brown;
-}
-
-.container--home__slider--text {
+.container--shelf__title {
     max-width   : 1200px;
     margin-left : auto;
     margin-right: auto;
