fix: header logo and searchbar containern

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -43,4 +43,8 @@
         height        : 55px;
         flex-direction: row-reverse;
     }
+
+    :global(.vtex-store-components-3-x-searchBarContainer) {
+        padding: 0;
+    }
 }
