--- a/styles/css/desktop/header/vtex.menu.css
+++ b/styles/css/desktop/header/vtex.menu.css
@@ -21,6 +21,12 @@
     justify-content: initial;
 }
 
+.menuContainer--desktop__menu-items {
+    max-width   : 1200px;
+    margin-left : auto;
+    margin-right: auto;
+}
+
 .menuContainer--desktop__menu-items :global(.vtex-menu-2-x-styledLinkContainer) {
     margin-left : 1rem;
     margin-right: 1rem;
