--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -40,6 +40,14 @@
     padding-bottom: 2px;
 }
 
+.logoContainer--social-icon {
+    min-width     : initial;
+    padding-top   : 2px;
+    padding-bottom: 2px;
+    padding-left  : 0;
+    padding-right : 1rem;
+}
+
 @media only screen and (min-width: 1025px) {
     :global(.vtex-store-components-3-x-logoImage--header__logo-icon) {
         width: 155px;
