feature: adding partners logo assets in the footer

--- a/styles/css/global/footer/vtex.flex-layout.css
+++ b/styles/css/global/footer/vtex.flex-layout.css
@@ -1,7 +1,18 @@
+.flexCol--content__container-phone {
+    gap: 1.125rem;
+}
+
 .flexRowContent--footer__payments-container {
     justify-content : center;
     padding         : 0.313rem;
     overflow-x      : hidden;
     background-color: white;
     flex-wrap       : wrap;
+}
+
+.flexRow--footer__partners-container {
+    padding-top   : 1rem;
+    padding-bottom: 1rem;
+    border-top    : solid 1px white;
+    border-bottom : solid 1px white;
 }
