--- a/styles/css/global/footer/vtex.rich-text.css
+++ b/styles/css/global/footer/vtex.rich-text.css
@@ -1,3 +1,12 @@
 .wrapper--footer__option-title :global(.vtex-rich-text-0-x-paragraph) {
     font-size: 14px;
 }
+
+.container--footer__partner-title {
+    justify-content: center;
+}
+
+.paragraph--footer__partner-title {
+    font-size  : 14px !important;
+    font-weight: 600;
+}
