--- a/styles/css/global/footer/vtex.rich-text.css
+++ b/styles/css/global/footer/vtex.rich-text.css
@@ -1,5 +1,6 @@
 .wrapper--footer__option-title :global(.vtex-rich-text-0-x-paragraph) {
-    font-size: 14px;
+    font-size  : 13px;
+    font-weight: 600;
 }
 
 .container--footer__partner-title {
@@ -9,4 +10,20 @@
 .paragraph--footer__partner-title {
     font-size  : 14px !important;
     font-weight: 600;
+}
+
+.paragraph--copyright__first-paragraph {
+    margin   : 0;
+    font-size: 12px !important;
+    color    : #ADA1C8;
+}
+
+.paragraph--copyright__second-paragraph {
+    margin   : 0;
+    font-size: 12px !important;
+}
+
+.paragraph--copyright__third-paragraph {
+    margin   : 0;
+    font-size: 12px !important;
 }
