--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -52,6 +52,16 @@
     max-width: none;
 }
 
+.logoContainer--appDownload-icon {
+    max-width    : none;
+    padding-left : 0;
+    padding-right: 0;
+}
+
+.logoImage--appDownload-icon {
+    max-width: none;
+}
+
 @media only screen and (min-width: 1025px) {
     :global(.vtex-store-components-3-x-logoImage--header__logo-icon) {
         width: 155px;
