--- a/styles/css/global/footer/vtex.flex-layout.css
+++ b/styles/css/global/footer/vtex.flex-layout.css
@@ -1,3 +1,23 @@
+.flexRow--footer__content-phone {
+    padding         : 20px 20px 50px;
+    margin          : 0;
+    background-color: #1F0A4E;
+}
+
+.flexRowContent--footer__options-phone {
+    flex-wrap      : wrap;
+    justify-content: space-between;
+    max-width      : 1200px;
+}
+
+.flexRowContent--footer__options-phone :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+    width: 50% !important;
+}
+
+.flexRowContent--follow_us-social_network :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+    width: auto !important;
+}
+
 .flexCol--content__container-phone {
     gap: 1.125rem;
 }
@@ -15,4 +35,8 @@
     padding-bottom: 1rem;
     border-top    : solid 1px white;
     border-bottom : solid 1px white;
+}
+
+.flexRowContent--partners__logos-container {
+    justify-content: center;
 }
