--- a/styles/css/desktop/footer/vtex.flex-layout.css
+++ b/styles/css/desktop/footer/vtex.flex-layout.css
@@ -1,5 +1,5 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 1280px) {
     .flexRowContent--footer__options-phone :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
-        width: 50% !important;
+        width: auto !important;
     }
 }
