--- a/styles/css/tablet/footer/vtex.flex-layout.css
+++ b/styles/css/tablet/footer/vtex.flex-layout.css
@@ -1,5 +1,5 @@
-@media only screen and (max-width: 1279px) {
-    .flexRowContent--footer__options-phone :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+@media only screen and (min-width: 601px) and (max-width: 1279px) {
+    .flexRowContent--footer__options :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
         width: 25% !important;
     }
 }
