feature: adding result search page template phone version

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -58,6 +58,11 @@
     padding-right: 0;
 }
 
+.logoContainer--filter-icon {
+    min-width: initial;
+    padding  : 0;
+}
+
 .logoImage--appDownload-icon {
     max-width: none;
 }
