--- a/styles/css/phone/contact_us/vtex.store-link.css
+++ b/styles/css/phone/contact_us/vtex.store-link.css
@@ -9,3 +9,9 @@
     text-decoration: initial;
     text-align     : center;
 }
+
+.link--contact_us-email--link {
+    text-decoration: initial;
+    color          : #FAD318;
+    font-size      : 13px !important;
+}
