--- a/styles/css/tablet/contact_us/vtex.rich-text.css
+++ b/styles/css/tablet/contact_us/vtex.rich-text.css
@@ -1,13 +1,14 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
     .wrapper--ticket__title :global(.vtex-rich-text-0-x-paragraph) {
-        font-size     : 24px !important;
+        font-size     : 50px !important;
         text-transform: uppercase;
         font-weight   : 700;
+        line-height   : 1.1;
     }
 
     .paragraph--ticket__content {
         padding  : 0;
         margin   : 0;
-        font-size: 16px !important;
+        font-size: 20px !important;
     }
 }
