feature: adding finish custom page contact us in desktop responsive

--- a/styles/css/global/contact_us/vtex.flex-layout.css
+++ b/styles/css/global/contact_us/vtex.flex-layout.css
@@ -9,4 +9,5 @@
 .flexRowContent--ticket-link_button--container {
     background-color: #FAD318;
     justify-content : center;
+    max-width       : 300px;
 }
