--- a/styles/css/tablet/contact_us/vtex.flex-layout.css
+++ b/styles/css/tablet/contact_us/vtex.flex-layout.css
@@ -20,6 +20,7 @@
 .flexRow--tablet__contact_us-email--container {
     padding    : 0 30px;
     margin-left: 30px;
+    max-width  : 380px;
     border-left: solid 1px white;
 }
 
