--- a/styles/css/tablet/contact_us/vtex.rich-text.css
+++ b/styles/css/tablet/contact_us/vtex.rich-text.css
@@ -4,6 +4,7 @@
         text-transform: uppercase;
         font-weight   : 700;
         line-height   : 1.1;
+        max-width     : 400px;
     }
 
     .paragraph--ticket__content {
