--- a/styles/css/global/vtex.store-components.css
+++ b/styles/css/global/vtex.store-components.css
@@ -67,6 +67,10 @@
     max-width: none;
 }
 
+:global(.vtex-reviews-and-ratings-3-x-summaryTotalReviews) {
+    color: #FAD318;
+}
+
 @media only screen and (min-width: 1025px) {
     :global(.vtex-store-components-3-x-logoImage--header__logo-icon) {
         width: 155px;
