feature: add pdp layout v2 mobile

--- a/styles/css/global/vtex.store-components.css
+++ b/styles/css/global/vtex.store-components.css
@@ -67,6 +67,10 @@
     max-width: none;
 }
 
+.currencyContainer {
+    font-size: 13px !important;
+}
+
 :global(.vtex-reviews-and-ratings-3-x-summaryTotalReviews) {
     color: #FAD318;
 }
