--- a/styles/css/mobile/pdp/vtex.flex-layout.css
+++ b/styles/css/mobile/pdp/vtex.flex-layout.css
@@ -11,6 +11,7 @@
     gap: 1rem;
 }
 
+/* pdp main content content */
 .flexCol--product__main_detail-container {
     gap          : 0.5rem;
     padding-left : 20px;
@@ -45,10 +46,8 @@
     gap            : 0.5rem;
 }
 
+/* pdp check price section */
 .flexCol--check_price-content {
-    /* max-width   : 633px;
-    margin-left : auto;
-    margin-right: auto; */
     padding: 0;
 }
 
@@ -96,16 +95,18 @@
     font-size: 0;
 }
 
+/* pdp key activation section */
 .flexRow--product__key_activation-container {
     padding-left : 20px;
     padding-right: 20px;
 }
 
-/* .flexRowContent--product__key_activation-container {
+.flexRowContent--product__key_activation-container {
     display       : flex;
     flex-direction: row;
     flex-wrap     : wrap;
-} */
+    gap           : 1rem;
+}
 
 .flexCol--product__key_activation-content {
     gap: 1rem;
