feature: adjust card layout in related products

--- a/styles/css/mobile/pdp/vtex.flex-layout.css
+++ b/styles/css/mobile/pdp/vtex.flex-layout.css
@@ -126,6 +126,12 @@
     padding-top: 10px;
 }
 
+/* related products section container */
+.flexRow--shelfRelatedProducts-container {
+    padding-left : 20px;
+    padding-right: 20px;
+}
+
 /* reviews section container */
 
 .flexRowContent--product__reviews-container {
