--- a/styles/css/desktop/header/vtex.menu.css
+++ b/styles/css/desktop/header/vtex.menu.css
@@ -31,7 +31,7 @@
 }
 
 .menuContainer--desktop__menu-items :global(.vtex-menu-2-x-styledLinkContainer) {
-    margin-left : 1rem;
+    margin-left : 0;
     margin-right: 1rem;
 }
 
