--- a/styles/css/global/footer/vtex.flex-layout.css
+++ b/styles/css/global/footer/vtex.flex-layout.css
@@ -49,6 +49,13 @@
     justify-content: center;
 }
 
+.flexRowContent--footer__option_currency {
+    justify-content: flex-start;
+    border         : solid 1px white;
+    width          : fit-content;
+    padding-left   : 1rem;
+}
+
 @media only screen and (min-width: 1080px) {
     .flexRowContent--footer__payments-container {
         justify-content: left;
