fix: adjust drawer searchbar intelligent-search on tablet

--- a/styles/css/global/header/vtex.store-drawer.css
+++ b/styles/css/global/header/vtex.store-drawer.css
@@ -2,3 +2,10 @@
     color     : #ffff;
     align-self: center;
 }
+
+.closeIconButton {
+    height  : 38px;
+    position: absolute;
+    top     : 0;
+    right   : 0;
+}
