--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -1,6 +1,7 @@
 .flexRow--header__desktop :global(.vtex-store-components-3-x-container) {
     padding-left : 0;
     padding-right: 0;
+    max-width    : initial;
 }
 
 .flexRowContent--desktop__navbar-options {
