feature: add bullets diagramation custom component in desktop layout

--- a/styles/css/global/home/itgloberspartnercl.bullets-diagramation.css
+++ b/styles/css/global/home/itgloberspartnercl.bullets-diagramation.css
@@ -1,3 +1,7 @@
 .bullet__item--title {
   color: white;
 }
+
+.bulletGroup-container :global(.vtex-slider-layout-0-x-paginationDotsContainer) {
+  display: none;
+}
