fix:whatsapp button size and fix login button on mobile

--- a/styles/css/phone/header/vtex.store-drawer.css
+++ b/styles/css/phone/header/vtex.store-drawer.css
@@ -39,3 +39,10 @@
     border        : none;
     flex-direction: row-reverse;
 }
+
+.drawerHeader--phone__drawer-searchbar .closeIconButton {
+    height  : 38px;
+    position: absolute;
+    top     : 0;
+    right   : 0;
+}
