feature: adding add to cart info custom component and fix breadcrumb in pdp

--- a/styles/css/global/departments/vtex.flex-layout.css
+++ b/styles/css/global/departments/vtex.flex-layout.css
@@ -1,3 +1,9 @@
 .flexRowContent--category__results-container {
     margin-bottom: 2rem;
 }
+
+.flexRowContent--breadcrumb__container-plp {
+    max-width   : 1200px;
+    margin-left : auto;
+    margin-right: auto;
+}
