--- a/styles/css/mobile/pdp/vtex.flex-layout.css
+++ b/styles/css/mobile/pdp/vtex.flex-layout.css
@@ -17,7 +17,20 @@
     }
 }
 
+@media only screen and (max-width: 639px) {
+    .flexRowContent--shelfRelatedProducts-container :global(.vtex-slider-0-x-sliderFrame) {
+        transform     : translateX(0px) !important;
+        flex-direction: column;
+        width         : 100% !important;
+    }
+}
+
 @media only screen and (max-width: 1024px) {
+    .flexRowContent--breadcrumb__container-pdp {
+        padding-left : 20px;
+        padding-right: 20px;
+    }
+
     .flexRow--product__key_activation-container {
         padding-left : 20px;
         padding-right: 20px;
