--- a/styles/css/global/home/vtex.flex-layout.css
+++ b/styles/css/global/home/vtex.flex-layout.css
@@ -62,3 +62,10 @@
 .flexCol--product__information {
     gap: 0.5rem;
 }
+
+.flexRow--custom_search_bar-container {
+    max-width    : 1200px;
+    margin-left  : auto;
+    margin-right : auto;
+    margin-bottom: 2.5rem;
+}
