--- a/styles/css/global/home/vtex.flex-layout.css
+++ b/styles/css/global/home/vtex.flex-layout.css
@@ -15,6 +15,12 @@
     height           : 44px;
 }
 
+.flexRowContent--quickOrder__container {
+    max-width   : 1200px;
+    margin-left : auto;
+    margin-right: auto;
+}
+
 .flexCol--home__slider--one {
     margin-bottom: 2rem;
 }
